bug: ant-table-placeholder default z-index is 9999 !?

--- a/src/styles/antd.css
+++ b/src/styles/antd.css
@@ -142,6 +142,9 @@
   border-color: var(--table-border) !important;
   padding: 8px !important;
 }
+.ant-table-placeholder {
+  z-index: 1 !important;
+}
 
 /* Buttons */
 .ant-btn-color-default {
